Fixing alignment of .tooltip--left class so it doesn't go off the screen

--- a/scss/components/_tooltips.scss
+++ b/scss/components/_tooltips.scss
@@ -98,8 +98,11 @@
   }
 
   &.tooltip--left {
-    left: auto;
-    right: u(-14rem);
+    left: u(-2rem);
+
+    &::before {
+      left: u(2.8rem);
+    }
   }
 }
 
